--- a/kustom-webapp/overlays/dev/kustomization.yaml
+++ b/kustom-webapp/overlays/dev/kustomization.yaml
@@ -1,9 +1,12 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-- ../../base
-
+  - ../../base
 patches:
- - replicas.yaml
-
+  - path: replicas.yaml
+    target:
+      kind: Deployment
+      name: my-app  # Replace with the actual resource name
 configMapGenerator:
-- name: mykustom-map
-  env: config.properties
+  - name: mykustom-map
+    env: config.properties
