--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -3,4 +3,4 @@ replicas: 1
 
 configmap:
   data:
-    CUSTOM_HEADER: 'This is on the DEV environment! On Maor Mac'
+    CUSTOM_HEADER: 'This is on the DEV environment! helm-webApp'
